plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_11

group 'com.keimons.deepjson'
version '1.0-Alpha'

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

dependencies {
    // ASM
    implementation 'org.ow2.asm:asm:8.0.1'
    implementation 'org.ow2.asm:asm-commons:8.0.1'

    implementation 'com.baidu:jprotobuf:2.4.6'
    implementation 'com.alibaba:fastjson:1.2.75'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    implementation 'com.google.code.gson:gson:2.8.6'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    jvmArgs "-verbose:gc -Xms8192m -Xmx8192m"
    useJUnitPlatform()
}

compileJava {
    println classpath.asPath
    options.compilerArgs += ['--module-path', classpath.asPath]
    options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.vm.annotation=deepjson']
}

javadoc {
    options.encoding = "UTF-8"
    options.charSet = "UTF-8"
}